// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for pdf2csv module generate csv from intermediat representation of table.pdf data 1`] = `
"
,\\"0\\",\\"1\\",\\"2\\",\\"3\\",\\"4\\",\\"5\\",\\"6\\",\\"7\\",\\"8\\",\\"9\\"
\\"a\\"
\\"b\\"
\\"c\\"
\\"d\\"
\\"e\\"
\\"f\\"
\\"g\\"
\\"h\\"
\\"i\\"
\\"j\\"
\\"k\\"
\\"l\\"
\\"m\\"
\\"n\\"
\\"o\\"
\\"p\\"
\\"q\\"
\\"r\\"
\\"s\\"
\\"t\\"
\\"u\\"
\\"v\\"
\\"w\\"
\\"x\\"
\\"y\\"
\\"z\\""
`;

exports[`Tests for pdf2csv module generate csv from intermediat representation of table3.pdf data 1`] = `
"
,\\"0\\",\\"1\\",\\"2\\",\\"3\\",\\"4\\",\\"5\\",\\"6\\",\\"7\\",\\"8\\",\\"9\\"
\\"a\\",\\"yas wanth\\",\\"mali setty
mal isetty\\"
\\"b\\",\\"As a follow-up to the first round of interview you had, we have 
come up with a coding challenge for you to work upon. Please 
take a look at the challenge and let us know if you have the time 
and interest to solve the problem.\\",\\"gowthu
kum  mara\\"
\\"c\\"
\\"d\\"
\\"e\\"
\\"f\\"
\\"g\\"
\\"h\\"
\\"i\\"
\\"j\\"
\\"k\\"
\\"l\\"
\\"m\\"
\\"n\\"
\\"o\\"
\\"p\\"
\\"q\\"
\\"r\\"
\\"s\\"
\\"t\\"
\\"u\\"
\\"v\\"
\\"w\\"
\\"x\\"
\\"y\\"
\\"z\\""
`;

exports[`Tests for pdf2csv module generate csv from intermediat representation of test.pdf data 1`] = `
"
\\"Header1\\",\\"header2\\",\\"header3\\",\\"header4\\",\\"header5\\",\\"header6\\"
\\"a\\",\\"b\\",\\"c\\",\\"d\\",\\"e\\",\\"f\\"
\\"1\\",,\\"2\\",,\\"3\\",\\"4\\"
,\\"A\\",\\"B\\",\\"C\\""
`;

exports[`Tests for pdf2csv module generate csv from intermediat representation of tests.pdf data 1`] = `
"
\\"1\\",\\"2\\",\\"3\\",\\"4\\",\\"5\\",\\"6\\",\\"7\\",\\"8\\",\\"9\\",\\"10\\",\\"11\\",\\"12\\",\\"13\\",\\"14\\",\\"15\\",\\"16\\",\\"17\\",\\"18\\",\\"19\\",\\"20\\"
\\"A\\",\\"B\\",\\"C\\",\\"D\\",\\"E\\",\\"F\\",\\"G\\",\\"H\\",\\"I\\",\\"J\\",\\"K\\",\\"L\\",\\"M\\",\\"N\\",\\"O\\",\\"P\\",\\"Q\\",\\"R\\",\\"S\\",\\"T\\"
\\"U\\",,\\"V\\",,\\"W\\",,\\"X\\",,\\"Y\\",,\\"Z\\"
,\\"aa\\",\\"bb\\",\\"cc\\",\\"dd\\",\\"ee\\",\\"ff\\",\\"gg\\",\\"hh\\",\\"ii\\",\\"jj\\",\\"kk\\"
,,\\"abc\\",,,,\\"def\\",,,,\\"ghi\\",,,,\\"lmn\\",,,,\\"iljk\\"
\\"----\\"
\\"a\\",\\"b\\",\\"c\\",\\"d\\",\\"e\\",\\"f\\",\\"g\\",\\"h\\",\\"i\\",\\"j\\",\\"k\\",\\"l\\",\\"m\\",\\"n\\",\\"o\\",\\"p\\",\\"q\\",\\"r\\",\\"s\\",\\"t\\"
\\"a\\",\\"b\\",\\"c\\",\\"d\\",\\"e\\",\\"f\\",\\"g\\",\\"h\\",\\"i\\",\\"j\\",\\"k\\",\\"l\\",\\"m\\",\\"n\\",\\"o\\",\\"p\\",\\"q\\",\\"r\\",\\"s\\",\\"t\\"
\\"aaa
aaa\\",\\"bbb
bbb\\",\\"ccc
ccc\\""
`;
